cvapp/cvapp-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cvapp-api
  labels:
    app: cvapp-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cvapp-api
  template:
    metadata:
      labels:
        app: cvapp-api
    spec:
      containers:
        - name: cvapp-api
          image: michalziaja/cvapp-api:latest
          ports:
            - name: cvapp-api-port
              containerPort: 8000
