cvapp/cvapp-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cvapp-db
  labels:
    app: cvapp-db
spec:
  selector:
    matchLabels:
      app: cvapp-db
  replicas: 1
  template:
    metadata:
      labels:
        app: cvapp-db
    spec:
      containers:
        - name: cvapp-db
          image: mongo
          ports:
            - name: cvapp-db-port
              containerPort: 27017
          volumeMounts:
            - mountPath: /mongo/data  
              name: cvapp-data
      nodeSelector:
        zone: eu-central-1a
      # volumes:
      #   - name: cvapp-data
      #     awsElasticBlockStore:
      #       volumeID: vol-01b435f1b893a7908
      #       fsType: ext4
      
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-pvc
      
      
      # initContainers:
      #   - name: busybox
      #     image: busybox:latest
      #     command: ["sh", "-c", "rm -rf /mongo/data/lost+found"]
      #     volumeMounts:
      #       - name: cvapp-data  
      #         mountPath: /mongo/data
