cvapp/cvapp-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cvapp-api
  labels:
    app: cvapp-api
spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: cvapp-api-port
  selector:
    app: cvapp-api
  type: ClusterIP
