cvapp/cvapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cvapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: www.cvapplication.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cvapp-web-svc
            port:
              number: 8001
